--- a/src/app/component/seat-management/seat-management.component.html
+++ b/src/app/component/seat-management/seat-management.component.html
@@ -1,21 +1,22 @@
 <div class="settings-panel">
   <h2>Configure Room</h2>
   <div class="input-group">
-    <label>Room Width: <input type="number" [(ngModel)]="room.width" /></label>
-    <label>Room Height: <input type="number" [(ngModel)]="room.height" /></label>
+    <label>Room Width: <input type="number" [(ngModel)]="roomTemplate.width" /></label>
+    <label>Room Height: <input type="number" [(ngModel)]="roomTemplate.height" /></label>
   </div>
   <div class="input-group">
-    <label>Left Seats: <input type="number" [(ngModel)]="seatConfig.left" /></label>
-    <label>Right Seats: <input type="number" [(ngModel)]="seatConfig.right" /></label>
-    <label>Back Seats: <input type="number" [(ngModel)]="seatConfig.back" /></label>
-    <label>Entry Left: <input type="number" [(ngModel)]="seatConfig.entryLeft" /></label>
-    <label>Entry Right: <input type="number" [(ngModel)]="seatConfig.entryRight" /></label>
+    <label>Left Seats: <input type="number" [(ngModel)]="seatConfigTemplate.left" /></label>
+    <label>Right Seats: <input type="number" [(ngModel)]="seatConfigTemplate.right" /></label>
+    <label>Back Seats: <input type="number" [(ngModel)]="seatConfigTemplate.back" /></label>
+    <label>Entry Left: <input type="number" [(ngModel)]="seatConfigTemplate.entryLeft" /></label>
+    <label>Entry Right: <input type="number" [(ngModel)]="seatConfigTemplate.entryRight" /></label>
   </div>
-  <button (click)="generateGrid()">Generate Room</button>
-  <button class="save" (click)="saveToDB()">Save</button>
+
+<!-- <button (click)="generateGrid()">Generate Room</button>
+  <button class="save" (click)="saveToDB()">Save</button> -->
 </div>
 
-<div
+  <!-- <div
   class="seat-grid"
   [style.gridTemplateColumns]="'repeat(' + room.width + ', 30px)'"
 >
@@ -35,4 +36,36 @@
       </div>
     </ng-container>
   </ng-container>
+</div> -->
+
+
+<button (click)="addRoom()">Add Room</button>
+
+<div class="room_wrapper d-flex">
+
+
+<div *ngFor="let room of rooms; let roomIndex = index">
+  <h3>Room {{ roomIndex + 1 }}</h3>
+  <div
+    class="seat-grid"
+    [style.gridTemplateColumns]="'repeat(' + room.width + ', 30px)'"
+  >
+    <ng-container *ngFor="let row of room.grid; let i = index">
+      <ng-container *ngFor="let cell of row; let j = index">
+        <div
+          class="seat-cell"
+          [ngClass]="{
+            'seat': cell && cell.type !== 'door',
+            'door': cell?.type === 'door',
+            'empty': !cell
+          }"
+          (click)="onSeatMouseDown(i, j, roomIndex)"
+   
+        >
+          {{ cell?.id || (cell?.type === 'door' ? 'Door' : '') }}
+        </div>
+      </ng-container>
+    </ng-container>
+  </div>
+</div>
 </div>
