plan status change done

--- a/src/app/component/plan/plan.component.html
+++ b/src/app/component/plan/plan.component.html
@@ -119,7 +119,7 @@
                                     <td class="activity text-center" [ngClass]="{
                                 activeTab: !display_unshipped_columns[3].active 
                               }">
-                                        <button type="button" (click)="openConfirmation()" class="btn btn-light rounded-circle"><i
+                                        <button type="button" (click)="openConfirmation(plan, i)" class="btn btn-light rounded-circle"><i
                                                 class="fa-solid fa-ellipsis-vertical"></i></button>
                                     </td>
 
