room config added and sidebar fix

--- a/src/app/component/seat-management/seat-management.component.html
+++ b/src/app/component/seat-management/seat-management.component.html
@@ -1,46 +1,1 @@
-<div class="container">
-  <div class="settings-panel">
-    <h2>Configure Room</h2>
-    <div class="input-group">
-      <label>Room Width: <input type="number" [(ngModel)]="roomTemplate.width" /></label>
-      <label>Room Height: <input type="number" [(ngModel)]="roomTemplate.height" /></label>
-    </div>
-    <div class="input-group">
-      <label>Left Seats: <input type="number" [(ngModel)]="seatConfigTemplate.left" /></label>
-      <label>Right Seats: <input type="number" [(ngModel)]="seatConfigTemplate.right" /></label>
-      <label>Back Seats: <input type="number" [(ngModel)]="seatConfigTemplate.back" /></label>
-      <label>Entry Left: <input type="number" [(ngModel)]="seatConfigTemplate.entryLeft" /></label>
-      <label>Entry Right: <input type="number" [(ngModel)]="seatConfigTemplate.entryRight" /></label>
-    </div>
-
-  </div>
-
-  <button (click)="addRoom()">Add Room</button>
-
-  <div class="row g-3">
-    
-
-     @for(room of rooms; track $index; let roomIndex= $index)
-     {
-<div class="col-auto text-center">
-      <h3>Room {{ roomIndex + 1 }}</h3>
-      <div class="seat-grid" [style.gridTemplateColumns]="'repeat(' + room.width + ', 30px)'">
-        @for ( row of room.grid; track $index; let i = $index) {
-        @for(cell of row; track $index; let j= $index){
-        <div class="seat-cell" [ngClass]="{
-            'seat': cell && cell.type !== 'door',
-            'door': cell?.type === 'door',
-            'empty': !cell
-          }" (click)="onSeatMouseDown(i, j, roomIndex)">
-          {{ cell?.id || (cell?.type === 'door' ? 'Door' : '') }}
-        </div>
-        }
-        }
-      </div> 
-    </div>
- }
-
-
-   
-  </div>
-</div>
+<p>Seat managemnt woringki </p>
