--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,33 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
   --default-color:#012a5b;
 }
 
+/* Tab Navbar Css */
+
+.navbar-container {
+    width: max-content;
+    background: #405173;
+    padding: 7px;
+    border-radius: 8px;
+}
+
+.navbar-container>.nav-tabs {
+    border-bottom: none;
+}
+
+.navbar-container>.nav-tabs .nav-link {
+    color: #ffff;
+    border: none;
+    border-radius: 50px;
+    padding: 0.3rem 1rem 0.2rem;
+    margin-bottom: 0px;
+}
+
+.navbar-container>.nav-tabs .nav-link.active {
+    border-radius: 50px;
+    border: none;
+    color: #31344F;
+}
+
 .userdata-table-wrapper {
   width: 100% !important;
 }
@@ -78,11 +105,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
   font-size: 0.85rem !important;
 }
 
-/* Success button */
-.userdata-table-wrapper .datatable-contaner > table > tbody > tr > td .btn-success {
-  background-color: var(--bg-success) !important;
-  border-color: #01b81a !important;
-}
 
 /* Bordered table override */
 .userdata-table-wrapper .datatable-contaner > table.table-bordered > :not(caption) > * > * {
@@ -135,4 +157,8 @@ label{
   margin-bottom: 0.5rem;
 
 }
+
+
+
+
 
