--- a/src/app/component/seat-management/seat-management.component.html
+++ b/src/app/component/seat-management/seat-management.component.html
@@ -1,26 +1,20 @@
 <div class="container">
   <h2>Seat Management</h2>
+<div class="room-container">
+  @for (room of rooms; track room?.id) {
 
-  <div class="row g-4">
-    <div class="col-md-auto" *ngFor="let room of rooms; let i = index">
-      <div class="card p-3 shadow-sm">
-        <h5 class="text-primary">Room {{ i + 1 }}</h5>
-
-        <div class="seat-grid" [style.gridTemplateColumns]="getGridStyle(room)">
-          <ng-container *ngFor="let row of room.grid; let rowIndex = index">
-            <ng-container *ngFor="let cell of row; let colIndex = index">
-              <div class="seat-cell" [ngClass]="{
-                'seat-available': cell?.status === 'available',
-                'seat-booked': cell?.status === 'booked',
-                'door': cell?.type === 'door',
-                'empty': !cell
-              }">
-                {{ cell?.id || (cell?.type === 'door' ? 'Door' : '') }}
-              </div>
-            </ng-container>
-          </ng-container>
-        </div>
-      </div>
+    <h2>{{ room.name }}</h2>
+      <div class="seats-grid">
+  @for (seat of room.seats; track seat?.id) {
+   <div
+      class="seat"
+      [ngClass]="{ booked: seat.isBooked, available: !seat.isBooked }"
+      (click)="toggleSeat(room.id, seat.id)"
+    >
+      {{ seat.label }}
     </div>
-  </div>
+   }
+    </div> 
+  }
+    </div>
 </div>
