--- a/src/app/component/add-user/add-user.component.html
+++ b/src/app/component/add-user/add-user.component.html
@@ -90,7 +90,8 @@
             </div>
 
             <div class="col-md-3 my-2">
-                <label>Seat No <span class="text-danger">*</span></label>
+                <!-- <span class="text-danger">*</span> -->
+                <label>Seat No </label>
                 <input formControlName="seatNo" type="text" class="form-control"
                     [ngClass]="{'is-invalid':userForm?.get('seatNo')?.invalid && (userForm?.get('seatNo')?.touched || userForm?.get('seatNo')?.dirty)  }" />
                 @if ( userForm?.get('seatNo')?.invalid && userForm?.get('seatNo')?.touched ) {
