--- a/src/app/component/roomconfiguration/roomconfiguration.component.css
+++ b/src/app/component/roomconfiguration/roomconfiguration.component.css
@@ -1,72 +1,8 @@
-.settings-panel {
-  background: #f4f4f4;
-  padding: 1rem;
-  border-radius: 10px;
-  margin-bottom: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
 
-.input-group {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-}
-
-label {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.9rem;
-}
-
-input {
-  padding: 5px;
-  width: 80px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-
-button.save {
-  background-color: #10b981;
-  margin-left: 10px;
-}
-
-.seat-grid {
-  display: grid;
-  gap: 4px;
-  user-select: none;
-}
-
-.seat-cell {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  font-size: 0.7rem;
-  border-radius: 4px;
-  line-height: 30px;
-}
-
-.seat {
-  background-color: #4ade80;
-  color: #000;
-}
-
-.empty {
-  background-color: #e5e7eb;
-}
-
-.door {
-  background-color: #facc15; /* Yellow */
-  color: black;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.room_wrapper{
-  gap:10px
+.remove-btn {
+      position: absolute;
+    top: 50%;
+    right: 0%;
+    transform: translate(-50%, -50%);
+    margin-top: 2px;
 }
